--- a/index.html
+++ b/index.html
@@ -6,35 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Calculator</title>
+
+    <link rel="stylesheet" href="/styles.css">
+    <script src="https://kit.fontawesome.com/4284a63d5a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>My Calculator</h1>
 
-    <div class="container">
+    <div class="container-grid">
         <div class="output">
+            <div class="previous-operand"></div>
+            <div class="current-operand"></div>
+        </div>
 
-        </div>
-        <div class="keypad">
-            <button class="allClear">AC</button>
-            <button class="del">Del</button>
-            <button class="divide">/</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="multiply">X</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="subtract">-</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="add">+</button>
-            <button class="decimal">.</button>
-            <button class="number">0</button>
-            <button class="equalTo">=</button>
-        </div>
+        <button class="allClear span-two">AC</button>
+        <button class="del">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 32 40" x="0px" y="0px">
+                <g>
+                    <path
+                        d="M26.15,7.29H10.23A3,3,0,0,0,7.84,8.47l-4.37,5.7a3,3,0,0,0,0,3.66l4.37,5.7a3,3,0,0,0,2.39,1.18H26.15a3,3,0,0,0,3-3V10.29A3,3,0,0,0,26.15,7.29ZM21.16,18a1,1,0,0,1,0,1.42,1,1,0,0,1-.71.29,1,1,0,0,1-.71-.29l-2-2-2,2a1,1,0,0,1-1.42,0,1,1,0,0,1,0-1.42l2-2-2-2a1,1,0,0,1,1.42-1.42l2,2,2-2A1,1,0,1,1,21.16,14l-2,2Z" />
+                </g><text x="0" y="47" fill="#000000" font-size="5px" font-weight="bold"
+                    font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by The Icon
+                    Z</text><text x="0" y="52" fill="#000000" font-size="5px" font-weight="bold"
+                    font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun
+                    Project</text>
+            </svg></button>
+        <button class="divide">÷</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="multiply">×</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="subtract">-</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="add">+</button>
+        <button class="number">.</button>
+        <button class="number">0</button>
+        <button class="equalTo span-two">=</button>
+
     </div>
 
     <script src="/app.js"></script>
