--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Calculator</title>
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/4284a63d5a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -50,7 +50,7 @@
 
     </div>
 
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
